updated: call for paper's rules

--- a/CogMI2025/call-for-full-papers/index.html
+++ b/CogMI2025/call-for-full-papers/index.html
@@ -27,7 +27,7 @@ title: "Call for Full Papers pages"
             <!-- End Navbar -->
         </div>
         <!--=== End Header ===-->
-        
+
 
         <div class="bg-color-light">
 
@@ -128,11 +128,15 @@ title: "Call for Full Papers pages"
                                         are not
                                         currently under review for publication elsewhere.
                                         Papers submitted to <strong>Research</strong> track should be up to 10
-                                        pages in the standard two column IEEE proceedings format,
+                                        pages, anonymously in the standard two column IEEE proceedings format, excluding the
+                                        bibliography, well-marked appendices, and supplementary material.
                                         which can be found at
                                         <a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html"
                                             target="_blank">IEEE Manuscript Templates for Conference Proceedings
-                                        </a>.
+                                        </a>. Authors should not change the font or the margins of the IEEE format.
+                                        Papers should avoid revealing authors’ identity in the text. When referring to
+                                        their previous work, authors are required to cite their papers in the third
+                                        person, without identifying themselves.
                                         The papers should be submitted at the research track of the conference in
                                         <a href="https://easychair.org/conferences/?conf=ieeecogmi2025"
                                             target="_blank">EasyChair</a>.
@@ -370,7 +374,7 @@ title: "Call for Full Papers pages"
         <!--=== Scripts ===-->
         {% include scripts.html %}
         <!--=== End scripts ===-->
-
+    </div>
 </body>
 
 </html>
