--- a/cic2025/call-for-full-papers/index.html
+++ b/cic2025/call-for-full-papers/index.html
@@ -257,6 +257,9 @@ title: "Call for Full Papers pages"
                                     <li>AI influence</li>
                                     <li>Multimodal learning</li>
                                     <li>Federated learning</li>
+                                    <li>Large Language models</li>
+                                    <li>Social computing</li>
+                                    <li>Machine learning with graphs</li>   
 
                                 </ul>
                             </blockquote>
