--- a/tps2025/call-for-full-papers/index.html
+++ b/tps2025/call-for-full-papers/index.html
@@ -254,6 +254,9 @@ title: "Call for Full Papers pages"
                                     to</strong>:</p>
                             <blockquote class="hero margin-bottom-50">
                                 <ul>
+                                    <li>Large Language models</li>
+                                    <li>Social computing</li>
+                                    <li>Machine learning with graphs</li>  
                                     <li>Foundational, theoretical models for trust, privacy and security in
                                         emerging applications</li>
                                     <li>Trusted AI, Machine Learning and Deep Learning</li>
