--- a/CogMI2025/call-for-full-papers/index.html
+++ b/CogMI2025/call-for-full-papers/index.html
@@ -245,6 +245,9 @@ title: "Call for Full Papers pages"
                             <p class="margin-top-0">Topics of interest include, but are not limited to:</p>
                             <blockquote class="hero margin-bottom-50">
                                 <ul>
+                                    <li>Large Language models</li>
+                                    <li>Social computing</li>
+                                    <li>Machine learning with graphs</li>  
                                     <li>Artificial Intelligence – theory and application</li>
                                     <li>Machine learning, neural networks and deep learning</li>
                                     <li>AI and Machine cognition</li>
