--- a/CogMI2025/index.html
+++ b/CogMI2025/index.html
@@ -4144,18 +4144,9 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
 
                         <h4>Co-located Workshops</h4>
                         <ul>
-
-                            <!-- <li>
-                                    <a href="https://www.waam.me/2023/WAAM2023.pdf" target="_blank">
-                                        <p>
-                                            <span class="glyphicon glyphicon-link"></span>
-                                            <span>The Second IEEE International Workshop on Assured Autonomy, AI and Machine Learning (WAAM 2023)</span>
-                                        </p>
-                                    </a>
-                                </li> -->
                             <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
+                                <a href="https://www.engineering.pitt.edu/ieee-srcist2025" target="_blank">
+                                    &#128206; IEEE Workshop on Security and Resiliency of Critical Infrastructure and Space Technologies (IEEE SR-CIST 2025)
                                 </a>
                             </li>
 
