updated: minor errors

--- a/tps2025/call-for-full-papers/index.html
+++ b/tps2025/call-for-full-papers/index.html
@@ -51,7 +51,7 @@ title: "Call for Full Papers pages"
                         <div class="news-v3-in">
 
                             <h2 class="margin-bottom-5" style="margin-bottom: 0">
-                                <strong>IEEE CogMI 2025 Call for Papers</strong>
+                                <strong>IEEE TPS 2025 Call for Papers</strong>
                             </h2>
 
                             <h4 class="margin-bottom-5"><strong>Important dates:</strong></h4>
