--- a/tps2025/pcs/index.html
+++ b/tps2025/pcs/index.html
@@ -80,9 +80,11 @@ title: "blank"
                                         <h5>PC Members</h5>
                                         <ul>
                                             <li><i>Liyue Fan, UNC Charlotte</i></li>
+                                            <li><i>Bikash Chandra Singh, Old Dominion University</i></li>
                                             <li><i>Zhi Zhang, The University of Western Australia</i></li>
                                             <li><i>Kaitai Liang, Delft University of Technology</i></li>
                                             <li><i>Chuan Yue, Colorado School of Mines</i></li>
+                                            <li><i>Guangjing Wang, University of South Florida</i></li>
                                             <li><i>Barry Mishra, UCR</i></li>
                                             <li><i>Wenqi Wei, Fordham University</i></li>
                                             <li><i>Sharif Abuadbba, CSIRO’s Data61</i></li>
@@ -106,6 +108,9 @@ title: "blank"
                                             <li><i>Tamalika Mukherjee, Columbia University</i></li>
                                             <li><i>Yuan Hong, University of Connecticut</i></li>
                                             <li><i>Rachel Cummings, Columbia University</i></li>
+                                            <li><i>Danfeng Yao, Virginia Tech</i></li>
+                                            <li><i>Stephen Lee, University of Pittsburgh</i></li>
+                                            <li><i>Latifur Khan, The University of Texas at Dallas</i></li>
                                         </ul>
                                 
                                         <div style="height: 30px; clear: both;"></div>
