--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -105,8 +105,8 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         <h3 class="heading-md"><strong>Useful quick links</strong></h3>
                         <ul class="list-unstyled who margin-bottom-30">
                             <li><i class="fa fa-link"></i> EasyChair submission:
-                                <a href="" target="_blank" class="tooltips" data-toggle="tooltip"
-                                    data-original-title="Jump to this page">TBA</a>
+                                <a href="https://easychair.org/conferences/?conf=ieeetps2025" target="_blank" class="tooltips" data-toggle="tooltip"
+                                    data-original-title="Jump to this page">Here</a>
                             </li>
                         </ul>
                     </div>
@@ -148,7 +148,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-md-12">
+                        <!-- <div class="col-md-12">
 
                             <div class="headline">
                                 <h2>Notifications</h2>
@@ -162,7 +162,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     </div>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <hr>
                     <!--Important Dates & Notifications END-->
@@ -4124,33 +4124,6 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                             <li>
                                 <a href="https://www.engineering.pitt.edu/ieee-srcist2025" target="_blank">
                                     &#128206; IEEE Workshop on Security and Resiliency of Critical Infrastructure and Space Technologies (IEEE SR-CIST 2025)
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
                                 </a>
                             </li>
                         </ul>
