updated: minor errors

--- a/CogMI2025/index.html
+++ b/CogMI2025/index.html
@@ -128,8 +128,8 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         <h3 class="heading-md"><strong>Useful quick links</strong></h3>
                         <ul class="list-unstyled who margin-bottom-30">
                             <li><i class="fa fa-link"></i> EasyChair submission:
-                                <a href="" target="_blank" class="tooltips" data-toggle="tooltip"
-                                    data-original-title="Jump to this page">TBA</a>
+                                <a href="https://easychair.org/conferences/?conf=ieeecogmi2025" target="_blank" class="tooltips" data-toggle="tooltip"
+                                    data-original-title="Jump to this page">Here</a>
                             </li>
                         </ul>
                     </div>
@@ -171,7 +171,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-md-12">
+                        <!-- <div class="col-md-12">
 
                             <div class="headline">
                                 <h2>Notifications</h2>
@@ -185,7 +185,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     </div>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <hr>
                     <!--Important Dates & Notifications END-->
@@ -4150,7 +4150,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                 </a>
                             </li>
 
-                            <li>
+                            <!-- <li>
                                 <a href="" target="_blank">
                                     &#128206; TBA
                                 </a>
@@ -4175,7 +4175,7 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                 <a href="" target="_blank">
                                     &#128206; TBA
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                         <br>
                     </div>
