--- a/tps2025/pcs/index.html
+++ b/tps2025/pcs/index.html
@@ -80,12 +80,12 @@ title: "blank"
                                         <h5>PC Members</h5>
                                         <ul>
                                             <li><i>Sharif Abuadbba, CSIRO’s Data61, Australia</i></li>
-                                            <li><i>John Abascal, Northeastern University, USA</i></li>
+                                            <!-- <li><i>John Abascal, Northeastern University, USA</i></li> -->
                                             <li><i>Bo Chen, Michigan Technological University, USA</i></li>
-                                            <li><i>Wei-Ning Chen, Microsoft</i></li>
-                                            <li><i>Albert Cheu, Google</i></li>
+                                            <!-- <li><i>Wei-Ning Chen, Microsoft</i></li> -->
+                                            <!-- <li><i>Albert Cheu, Google</i></li> -->
                                             <li><i>Rachel Cummings, Columbia University, USA</i></li>
-                                            <li><i>Andy Dong, Stanford University, USA</i></li>
+                                            <!-- <li><i>Andy Dong, Stanford University, USA</i></li> -->
                                             <li><i>Edlira Dushku, Aalborg University, Denmark</i></li>
                                             <li><i>Lavanya Elluri, Texas A&M University -- Central Texas, USA</i></li>
                                             <li><i>Liyue Fan, UNC Charlotte, USA</i></li>
@@ -101,13 +101,13 @@ title: "blank"
                                             <li><i>Stephen Lee, University of Pittsburgh, USA</i></li>
                                             <li><i>Pooria Madani, Ontario Tech University, Canada</i></li>
                                             <li><i>Amir Masoumzadeh, University at Albany -- SUNY, USA</i></li>
-                                            <li><i>Ryan Mckenna, Google</i></li>
+                                            <!-- <li><i>Ryan Mckenna, Google</i></li> -->
                                             <li><i>Barry Mishra, UCR, USA</i></li>
                                             <li><i>Tamalika Mukherjee, Columbia University, USA</i></li>
                                             <li><i>Amit A. Nanavati, Ahmedabad University, India</i></li>
                                             <li><i>Balaji Palanisamy, University of Pittsburgh, USA</i></li>
-                                            <li><i>Dzung Pham, University of Massachusetts, Amherst, USA</i></li>
-                                            <li><i>Edo Roth, Google</i></li>
+                                            <!-- <li><i>Dzung Pham, University of Massachusetts, Amherst, USA</i></li> -->
+                                            <!-- <li><i>Edo Roth, Google</i></li> -->
                                             <li><i>Bikash Chandra Singh, Old Dominion University, USA</i></li>
                                             <li><i>Shamik Sural, Indian Institute of Technology Kharagpur, India</i>
                                             </li>
