--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -144,23 +144,23 @@ title: "blank"
                                             </li>
                                         </ul>
 
-                                        <h4 id="BestPaper">Industry/Government Co-Chairs</h4>
+                                        <!-- <h4 id="BestPaper">Industry/Government Co-Chairs</h4>
                                         <ul>
                                             <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a target="_blank" href="http://www.is.informatik.uni-duisburg.de/staff/fuhr.html">
+                                                <div>
+                                                    <a target="_blank" href="http://www.is.informatik.uni-duisburg.de/staff/fuhr.html">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Norbert_Fuhr.jpg">Norbert Fuhr</a>
-                                            University of Duisburg-Essen, Germany -->
+                                            University of Duisburg-Essen, Germany
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
-                                                    <!-- <a href="http://www.rosiejonesphd.com/">
+                                                <div>
+                                                    <a href="http://www.rosiejonesphd.com/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/rosie.jpg"/>Rosie Jones</a>
-                                                Spotify, U.S.A. -->
+                                                Spotify, U.S.A.
                                                 </div>
                                             </li>
-                                        </ul>
+                                        </ul> -->
 
 
                                         <!-- <h4 id="TestofTimeAward">Tutorial Co-Chairs</h4>
@@ -186,14 +186,14 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.linkedin.com/in/luo-si-00a5a54/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Luo_Si.jpg">Luo Si</a>
                                             Alibaba Group Inc. -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a target="_blank" href="http://infosense.cs.georgetown.edu/grace/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Grace_Hui_Yang.jpg">Grace Hui Yang</a>
                                             Georgetown University, U.S.A -->
@@ -214,14 +214,14 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="http://www.bigdatalab.ac.cn/~lanyanyan/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Yanyan_Lan.jpg">Yanyan Lan</a>
                                             Chinese Academy of Sciences, China -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.hangli-hl.com/index.html">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Hang_Li.jpg">Hang Li</a>
                                             ByteDance AI Lab, China -->
@@ -267,14 +267,14 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.barbara.cl/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Barbara_Poblete.jpg">Barbara Poblete</a>
                                             University of Chile, Chile -->
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a target="_blank" href="http://qub.ac.uk/schools/eeecs/Connect/Staff/BusinessCard/?name=j.shen">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Jerry_Shen.jpg">Jerry Shen</a>
                                             Queen's University Belfast, U.K. -->
@@ -294,7 +294,7 @@ title: "blank"
                                                 </div>
                                             </li>
                                             <li class="person-card">
-                                                <div>TBD
+                                                <div>
                                                     <!-- <a href="https://www.cse.msu.edu/~tangjili/">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/Jiliang_Tang.jpg">Jiliang Tang</a>
                                             Michigan State University, U.S.A. -->
@@ -354,7 +354,7 @@ title: "blank"
         <!--=== Scripts ===-->
         {% include scripts.html %}
         <!--=== End scripts ===-->
-
+    </div>
 </body>
 
 </html>
