fix guruduth keynote

--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -626,12 +626,12 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     <div class="panel-body"> -->
                                         <div class="media">
                                             <div class="media-left">
-                                                <img src="../../common/resources/images/guru.png" class="media-object" alt="Elisa Bertino" width="100">
+                                                <img src="../../common/resources/images/guru.png" class="media-object" alt="Guruduth Banavar" width="100">
                                             </div>
                                             <div class="media-body">
-                                                <p><a href="https://www.linkedin.com/in/banavar" target="_blank"><strong>Elisa Bertino</strong></a></p>
-                                                <p><em>Professor</em></p>
-                                                <p><em>Purdue University, USA</em></p>
+                                                <p><a href="https://www.linkedin.com/in/banavar" target="_blank"><strong>Guruduth Banavar</strong></a></p>
+                                                <p><em>Founding CTO</em></p>
+                                                <p><em>Viome, USA</em></p>
                                                 <p><a href="https://www.sis.pitt.edu/lersais/conference/cic/2022/keynotes.html" target="_blank">See Abstract Here</a></p>
                                             </div>
                                         </div>
