add huan liu as general co-chair

--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -81,11 +81,6 @@ title: "blank"
                                                 </div>
                                             </li>
 
-                                            <li class="person-card">
-                                                <div>
-                                                </div>
-                                            </li>
-
                                         </ul>
 
                                         <h4 id="Vice">General Co-Chairs</h4>
@@ -97,6 +92,15 @@ title: "blank"
                                                         Jerry Jialie Shen
                                                     </a>
                                                     <span class="affiliation">City St George's, University of London, U.K.</span>
+                                                </div>
+                                            </li>
+                                            <li class="person-card">
+                                                <div>
+                                                    <a target="_blank" href="https://search.asu.edu/profile/255975">
+                                                        <img
+                                                            src="{{ site.baseurl }}/assets/img/organizers/huanliu.jpg">Huan
+                                                        Liu</a>
+                                                    <span class="affiliation">Arizona State University, U.S.A.</span>
                                                 </div>
                                             </li>
                                         </ul>
