--- a/cic2025/organizers/index.html
+++ b/cic2025/organizers/index.html
@@ -82,10 +82,18 @@ title: "blank"
                                         <ul>
                                             <li class="person-card">
                                                 <div>
-                                                    <a target="_blank" href="http://www.thuir.cn/group/~YQLiu/">
+                                                    <a target="_blank" href="https://people.csiro.au/N/S/Surya-Nepal">
                                                 <img src="{{ site.baseurl }}/assets/img/organizers/nepal.jpeg">Surya Nepal</a>
                                                     <span class="affiliation">
                                                         CSIRO Data61, Australia</span>
+                                                </div>
+                                            </li>
+                                            <li class="person-card">
+                                                <div>
+                                                    <a target="_blank" href="https://sites.google.com/view/ashishkundu/home/">
+                                                <img src="{{ site.baseurl }}/assets/img/organizers/Ashish.png">Ashish Kundu</a>
+                                                    <span class="affiliation">
+                                                        Head of Cybersecurity Research, Cisco Research</span>
                                                 </div>
                                             </li>
                                         </ul>
