--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -96,11 +96,10 @@ title: "blank"
                                             </li>
                                             <li class="person-card">
                                                 <div>
-                                                    <a target="_blank" href="https://search.asu.edu/profile/255975">
+                                                    <a target="_blank" href="https://www.fau.edu/engineering/directory/faculty/khoshgoftaar/">
                                                         <img
-                                                            src="{{ site.baseurl }}/assets/img/organizers/huanliu.jpg">Huan
-                                                        Liu</a>
-                                                    <span class="affiliation">Arizona State University, U.S.A.</span>
+                                                            src="{{ site.baseurl }}/assets/img/organizers/taghi-k.jpg">Taghi Khogoftar</a>
+                                                    <span class="affiliation">Florida Atlantic University, U.S.A.</span>
                                                 </div>
                                             </li>
                                         </ul>
