--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -4126,6 +4126,12 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     &#128206; IEEE Workshop on Security and Resiliency of Critical Infrastructure and Space Technologies (IEEE SR-CIST 2025)
                                 </a>
                             </li>
+
+                            <li>
+                                <a href="https://sites.google.com/pitt.edu/tphac/home" target="_blank">
+                                    &#128206; IEEE Workshop on Trustworthy and Privacy-Preserving Human-AI Collaboration (IEEE TPHAC 2025)
+                                </a>
+                            </li>
                         </ul>
                         <br>
                     </div>
