--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -4138,32 +4138,11 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                 </a>
                             </li>
 
-                            <!-- <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
+                            <li>
+                                <a href="https://sites.google.com/pitt.edu/tphac/home" target="_blank">
+                                    &#128206; IEEE Workshop on Trustworthy and Privacy-Preserving Human-AI Collaboration (IEEE TPHAC 2025)
                                 </a>
                             </li>
-
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">
-                                    &#128206; TBA
-                                </a>
-                            </li> -->
                         </ul>
                         <br>
                     </div>
