--- a/tps2025/call-for-full-papers/index.html
+++ b/tps2025/call-for-full-papers/index.html
@@ -64,15 +64,15 @@ title: "Call for Full Papers pages"
                                             <span class="badge">Anywhere on Earth</span>
                                         </li>
                                         <li class="list-group-item list-group-item-warning">Submission Deadline
-                                            <span class="badge">June 21, 2025</span>
+                                            <span class="badge"><strike>June 21, 2025</strike> <strong>June 30, 2025</strong></span>
                                         </li>
                                         <li class="list-group-item list-group-item-success">Notification of Acceptance
                                             Date
-                                            <span class="badge">July 21, 2025</span>
+                                            <span class="badge"><strike>July 21, 2025</strike> <strong>July 30, 2025</strong></span>
                                         </li>
-                                        <!-- <li class="list-group-item list-group-item-info">Camera Ready Due
-                                            <span class="badge">TBD</span>
-                                        </li> -->
+                                        <li class="list-group-item list-group-item-danger">Camera Ready Due
+                                            <span class="badge">August 15, 2025</span>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
