--- a/CogMI2025/pcs/index.html
+++ b/CogMI2025/pcs/index.html
@@ -106,7 +106,7 @@ title: "blank"
         <!--=== Scripts ===-->
         {% include scripts.html %}
         <!--=== End scripts ===-->
-
+    </div>
 </body>
 
 </html>
