--- a/cic2025/pcs/index.html
+++ b/cic2025/pcs/index.html
@@ -86,9 +86,15 @@ title: "blank"
                                             <li><i>Shantanu Sharma, New Jersey Institute of Technology</i></li>
                                             <li><i>Fahad Saeed, Florida International University (FIU)</i></li>
                                             <li><i>Chao Li, Beijing Jiaotong University</i></li>
-                                            <li><i>Shuya Feng, (no affiliation provided)</i></li>
+                                            <li><i>Shuya Feng, University of Connecticut</i></li>
                                             <li><i>Taghi Khoshgoftaar, Florida Atlantic University</i></li>
                                             <li><i>Pietro Colombo, Università dell'Insubria</i></li>
+                                            <li><i>Qingyang Wang, Louisiana State University -- Baton Rouge</i></li>
+                                            <li><i>Sihao Hu, Georgia Institute of Technology</i></li>
+                                            <li><i>Massimo Villari, University of Messina</i></li>
+                                            <li><i>Luca Davoli, University of Parma</i></li>
+                                            <li><i>Lakshmish Ramaswamy, University of Georgia</i></li>
+                                            <li><i>Volker Hilt, Nokia Bell Labs</i></li>
                                         </ul>
                                 
                                         <div style="height: 30px; clear: both;"></div>
@@ -116,7 +122,7 @@ title: "blank"
         <!--=== Scripts ===-->
         {% include scripts.html %}
         <!--=== End scripts ===-->
-
+    </div>
 </body>
 
 </html>
