Add Indrakshi as vision co-chair

--- a/tps2025/organizers/index.html
+++ b/tps2025/organizers/index.html
@@ -167,6 +167,13 @@ title: "blank"
                                                         Australia</span>
                                                 </div>
                                             </li>
+                                            <li class="person-card">
+                                                <div>
+                                                    <a target="_blank" href="https://www.cs.colostate.edu/~iray/index.php">
+                                                        <img src="{{ site.baseurl }}/assets/img/organizers/indrakshi.jpg">Indrakshi Ray</a>
+                                                    <span class="affiliation">Colorado State University, USA</span>
+                                                </div>
+                                            </li>
                                         </ul>
 
 
