--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -155,6 +155,13 @@ title: "blank"
                                                         Australia</span>
                                                 </div>
                                             </li>
+                                            <li class="person-card">
+                                                <div>
+                                                    <a target="_blank" href="https://www.cs.colostate.edu/~iray/index.php">
+                                                        <img src="{{ site.baseurl }}/assets/img/organizers/indrakshi.jpg">Indrakshi Ray</a>
+                                                    <span class="affiliation">Colorado State University, USA</span>
+                                                </div>
+                                            </li>
                                         </ul>
 
                                         <!-- <h4 id="BestPaper">Industry/Government Co-Chairs</h4>
