--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -4550,6 +4550,11 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                     &#128206; Equitable & Inclusive Computing Workshop 2025 (EIC WORKSHOP 2025)
                                 </a>
                             </li>
+                            <li>
+                                <a href="https://ieeedistill.github.io/" target="_blank">
+                                    &#128206; IEEE Workshop on Distributed, Secure, and Trustworthy Intelligence with LLMs (IEEE DISTILL 2025)
+                                </a>
+                            </li>
                         </ul>
                         <br>
                     </div>
