--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -4493,6 +4493,44 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                     </div> -->
                     <!-- ===== social media icons END -->
                     <hr>
+                    <!-- sponsors  -->
+                    <div class="links">
+                        <h4>Financial Sponsors</h4>
+                        <ul>
+                            <!-- <li>
+                                <a href="http://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">
+                                    <span style='font-size:20px;'>&#128206;
+                                    The 11<sup>th</sup> IEEE International Conference on Collaboration and Internet Computing (IEEE CIC 2025)</span>
+                                </a>
+                            </li> -->
+                            <li>
+                                <img class="img-responsive" src="assets/img/logos/ieee.gif"
+                                    style="width: 100%; margin-top: 10%;">
+                            </li>
+                            <hr>
+                            <li>
+                                <img class="img-responsive" src="assets/img/logos/ieee_cs.png"
+                                    style="width: 100%; margin-top: 10%;">
+                            </li>
+                            <br>
+                        </ul>
+                        <hr>
+                        <h4> Platinum Corporate Sponsors</h4>
+                        <ul>
+                            <li>
+                                <img class="img-responsive" src="assets/img/logos/pitt_sci_logo.png"
+                                    style="width: 100%; margin-top: 10%;">
+                            </li>
+                        </ul>
+                        <h4> Gold Corporate Sponsors</h4>
+                        <ul>
+                            <li>
+                                <img class="img-responsive" src="assets/img/logos/TDK.png"
+                                    style="width: 100%; margin-top: 10%;">
+                            </li>
+                        </ul>
+                    </div>
+
                     <div class="links">
                         <h4>Co-located Conferences</h4>
                         <ul>
@@ -4559,36 +4597,6 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         <br>
                     </div>
 
-                    <!-- sponsors  -->
-                    <div class="links">
-                        <h4>Financial Sponsors</h4>
-                        <ul>
-                            <!-- <li>
-                                <a href="http://www.sis.pitt.edu/lersais/conference/cic/2025/" target="_blank">
-                                    <span style='font-size:20px;'>&#128206;
-                                    The 11<sup>th</sup> IEEE International Conference on Collaboration and Internet Computing (IEEE CIC 2025)</span>
-                                </a>
-                            </li> -->
-                            <li>
-                                <img class="img-responsive" src="assets/img/logos/ieee.gif"
-                                    style="width: 100%; margin-top: 10%;">
-                            </li>
-                            <hr>
-                            <li>
-                                <img class="img-responsive" src="assets/img/logos/ieee_cs.png"
-                                    style="width: 100%; margin-top: 10%;">
-                            </li>
-                            <br>
-                        </ul>
-                        <hr>
-                        <h4> Platinum Corporate Sponsors</h4>
-                        <ul>
-                            <li>
-                                <img class="img-responsive" src="assets/img/logos/pitt_sci_logo.png"
-                                    style="width: 100%; margin-top: 10%;">
-                            </li>
-                        </ul>
-                    </div>
                     <!-- sponsor ends -->
 
                     <!-- <iframe name="f99218c3348b54" title="fb:page Facebook Social Plugin" frameborder="0"
