--- a/tps2025/call-for-full-papers/index.html
+++ b/tps2025/call-for-full-papers/index.html
@@ -77,7 +77,27 @@ title: "Call for Full Papers pages"
                                 </div>
                             </div>
 
-
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <h4 style="color: brown;">Round 2 Submission Dates:</h4>
+                                    <ul class="list-group">
+                                        <li class="list-group-item list-group-item-info">Time Zone
+                                            <span class="badge">Anywhere on Earth</span>
+                                        </li>
+                                        <li class="list-group-item list-group-item-warning">Submission Deadline
+                                            <span class="badge"><strong>August 08, 2025</strong></span>
+                                        </li>
+                                        <li class="list-group-item list-group-item-success">Notification of Acceptance
+                                            Date
+                                            <span class="badge"><strong>September 08, 2025</strong></span>
+                                        </li>
+                                        <li class="list-group-item list-group-item-danger">Camera Ready Due
+                                            <span class="badge">September 15, 2025</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            
                             <p>
                                 Recent advances in computing and information technologies such as IoT, mobile
                                 Edge/Cloud computing, cyber-physical-social systems,
