fix: Taghi name

--- a/CogMI2025/organizers/index.html
+++ b/CogMI2025/organizers/index.html
@@ -98,7 +98,7 @@ title: "blank"
                                                 <div>
                                                     <a target="_blank" href="https://www.fau.edu/engineering/directory/faculty/khoshgoftaar/">
                                                         <img
-                                                            src="{{ site.baseurl }}/assets/img/organizers/taghi-k.jpg">Taghi Khogoftar</a>
+                                                            src="{{ site.baseurl }}/assets/img/organizers/taghi-k.jpg">Taghi Khoshgoftaar</a>
                                                     <span class="affiliation">Florida Atlantic University, U.S.A.</span>
                                                 </div>
                                             </li>
