Add: Huan Liu keynote, Keynote page

--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -237,6 +237,45 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                     <!--Important Dates & Notifications END-->
 
                     <!-- keynote speaker lists starts -->
+                    <h3 class="keynoteHeader" id="2025">
+                        <a class="triangle">&#9650;</a>
+                        <a class="keynoteHeaderText">Keynote Speakers for IEEE CIC/CogMI/TPS 2025</a>
+                    </h3>
+                    <div class="keynoteContent" id="content2025">
+                        <p><b>Keynote Speakers</b> (Last Names in Alphabetical Order):</p>
+                        <hr>
+                        <div class="panel-group accordion" id="keynoteAccordion2025" role="tablist"
+                            aria-multiselectable="true">
+
+                            <!-- Panel 1: Huan Liu -->
+                            <div class="panel panel-default">
+                                <div class="panel-heading" role="tab" id="headingChi">
+                                    <h4 class="panel-title">
+                                        <a>
+                                            Huan Liu - Ceaseless Inquiries: Lesson Learned from Social Media Mining
+                                        </a>
+                                    </h4>
+                                </div>
+                                <!-- <div id="collapseChi" class="panel-collapse collapse" role="tabpanel"
+                                    aria-labelledby="headingChi">
+                                    <div class="panel-body"> -->
+                                <div class="media">
+                                    <div class="media-left">
+                                        <img src="../../common/resources/images/huanliu.jpg" class="media-object"
+                                            alt="Huan Liu" width="100">
+                                    </div>
+                                    <div class="media-body">
+                                        <p><a href="https://www.public.asu.edu/~huanliu" target="_blank"><strong>Huan Liu</strong></a></p>
+                                        <p><em>Regents Professor</em></p>
+                                        <p><em>Arizona States University, USA</em></p>
+                                    </div>
+                                </div>
+                                <!-- </div>
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+
                     <h3 class="keynoteHeader" id="1">
                         <a class="triangle">&#9650;</a>
                         <a class="keynoteHeaderText">Keynote Speakers for IEEE CIC/CogMI/TPS 2024</a>
@@ -1908,8 +1947,6 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         </div><!-- end #keynoteAccordion30 -->
                     </div>
 
-
-
                     <h3 class="keynoteHeader" id="2">
                         <a class="triangle">&#9650;</a>
                         <a class="keynoteHeaderText">Plenary Panels for IEEE CIC/CogMI/TPS 2024</a>
@@ -2958,12 +2995,6 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         </div><!-- end #keynoteAccordion18 -->
                         <hr>
                     </div>
-
-
-
-
-
-
 
                     <h3 class="keynoteHeader" id="3">
                         <a class="triangle">&#9650;</a>
@@ -4711,6 +4742,11 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
             if (content8) {
                 content8.style.display = 'block';
                 document.getElementById('1').classList.add('open');
+            }
+            const content2025 = document.getElementById('content2025');
+            if (content2025) {
+                content2025.style.display = 'block';
+                document.getElementById('2025').classList.add('open');
             }
 
             headers.forEach(header => {
