fix: keynote bug

--- a/tps2025/index.html
+++ b/tps2025/index.html
@@ -265,9 +265,9 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                                             alt="Huan Liu" width="100">
                                     </div>
                                     <div class="media-body">
-                                        <p><a href="https://www.public.asu.edu/~huanliu" target="_blank"><strong>Huan Liu</strong></a></p>
+                                        <p><a href="https://search.asu.edu/profile/255975" target="_blank"><strong>Huan Liu</strong></a></p>
                                         <p><em>Regents Professor</em></p>
-                                        <p><em>Arizona States University, USA</em></p>
+                                        <p><em>Arizona State University, USA</em></p>
                                     </div>
                                 </div>
                                 <!-- </div>
