--- a/cic2025/keynotes/index.html
+++ b/cic2025/keynotes/index.html
@@ -64,7 +64,7 @@ title: "Call for Full Papers pages"
                                         <span>Arizona State University, USA</span>
                                         <br>
                                         <span class="glyphicon glyphicon-link"></span>
-                                        <a href="https://www.public.asu.edu/~huanliu" target="_blank">Home Page
+                                        <a href="https://search.asu.edu/profile/255975" target="_blank">Home Page
                                         </a>
                                         <br>
                                         <span><em> <strong>Day/Time for Keynote Speech:</strong>TBA</em></span>
@@ -80,7 +80,7 @@ title: "Call for Full Papers pages"
                             </div> -->
                             <div class="row">
                                 <div class="col-md-3">
-                                    <img src="../../common/resources/images/huanliu.jpg" class="img-responsive"
+                                    <img src="../../../common/resources/images/huanliu.jpg" class="img-responsive"
                                         alt="Huan Liu">
                                 </div>
 
@@ -118,7 +118,7 @@ title: "Call for Full Papers pages"
         <!--=== Scripts ===-->
         {% include scripts.html %}
         <!--=== End scripts ===-->
-
+    </div>
 </body>
 
 </html>
