add: registration, and add links to tdk, and fix some bugs

--- a/cic2025/index.html
+++ b/cic2025/index.html
@@ -4612,8 +4612,10 @@ title: "11th IEEE International Conference on Collaboration and Internet Computi
                         <h4> Gold Corporate Sponsors</h4>
                         <ul>
                             <li>
-                                <img class="img-responsive" src="assets/img/logos/TDK.png"
+                                <a href="https://www.tdk.com/" target="_blank">
+                                    <img class="img-responsive" src="assets/img/logos/TDK.png"
                                     style="width: 100%; margin-top: 10%;">
+                                </a>
                             </li>
                             <hr>
                             <li>
